--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-offline": "^6.13.3",
+    "gatsby-plugin-page-creator": "^5.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-json": "^5.13.1",
+    "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-date-range": "^2.0.1",
+    "react-datepicker": "^7.3.0",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5"
   },
   "devDependencies": {
+    "@types/react-date-range": "^1.4.9",
     "prettier": "^2.8.8"
   },
   "keywords": [
