--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "gatsby-transformer-json": "^5.13.1",
     "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^2.0.5"
+    "react-helmet-async": "^2.0.5",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@types/react-date-range": "^1.4.9",
