--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/react-date-range": "^1.4.9",
     "prettier": "^2.8.8"
   },
